# youtube_playlist

./: .gitignore  LICENSE  README.md  api.py  app.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
src/: api.py  app.py  models.py
templates/: _player.html  _video.html  _video_input.html  _video_list.html  index.html
test/: tests.py
tests/: tests.py
utils/: update_coverage_badge.py
