[tool.poetry]
name = "youtube-playlist"
version = "0.1.0"
description = "This is a convenient web tool for creating and controlling youtube playlists with donation alerts integration"
authors = ["michaelnotjackson <mhlsjk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Turbo-Flask = "^0.8.5"
pydantic = "^2.9.2"
flask-pydantic = "^0.12.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
